<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.TerrainReservationActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activityReservation"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_ChooseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView_Date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/choose_date_for_reservation"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/button_calendarDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@null"
                        android:clickable="true"
                        android:contentDescription="@string/calendar_button"
                        android:focusable="true"
                        android:src="@drawable/ic_baseline_calendar_today_24"
                        app:layout_constraintEnd_toEndOf="@id/textView_Date"
                        app:layout_constraintStart_toStartOf="@id/textView_Date"
                        app:layout_constraintTop_toBottomOf="@id/textView_Date" />

                    <TextView
                        android:id="@+id/textView_chosen_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:hint="@string/date"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="@id/textView_Date"
                        app:layout_constraintStart_toStartOf="@id/textView_Date"
                        app:layout_constraintTop_toBottomOf="@id/button_calendarDate"
                        tools:text="10-20-2020" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutForHours_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/white"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout_ChooseDate">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <TextView
                        android:id="@+id/startHourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/choose_the_start_hour"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineDate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/endHourTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/choose_the_end_hour"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guidelineDate"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutChooseHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayoutForHours_TextView">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />


                    <TextView
                        android:id="@+id/startHour_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_horizontal"
                        android:hint="@string/start_hour"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineTime"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageButton
                        android:id="@+id/button_hourStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="16dp"
                        android:background="@null"
                        android:clickable="true"
                        android:contentDescription="@string/select_hour_start_button"
                        android:focusable="true"
                        android:src="@drawable/ic_baseline_schedule_24"
                        app:layout_constraintBottom_toTopOf="@id/startHour_TV"
                        app:layout_constraintEnd_toEndOf="@id/startHour_TV"
                        app:layout_constraintStart_toStartOf="@id/startHour_TV"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/endHour_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:autofillHints="End time edit text"
                        android:gravity="center_horizontal"
                        android:hint="@string/end_hour"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guidelineTime" />

                    <ImageButton
                        android:id="@+id/button_hourEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="16dp"
                        android:background="@null"
                        android:clickable="true"
                        android:contentDescription="@string/select_hour_end_button"
                        android:focusable="true"
                        android:gravity="center_horizontal"
                        android:src="@drawable/ic_baseline_schedule_24"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toTopOf="@id/endHour_TV"
                        app:layout_constraintEnd_toEndOf="@id/endHour_TV"
                        app:layout_constraintStart_toStartOf="@id/endHour_TV"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_ChooseRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraintLayoutChooseHours">


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_Reserve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraintLayout_ChooseRoom">

                    <Button
                        android:id="@+id/buttonReserve"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/make_a_reservation_button"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.6" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>